Teardown. Adding Bootstrap.

--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -1,6 +1,6 @@
 - name: About
-  color: '#165D0E'
+  color: '#1900FF'
 - name: Portfolio
-  color: '#882d61'
+  color: '#A200FF'
 #- name: Blog
 #  color: '#AA8239'
