--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Mitchell Gordon
 email: mitchell.gordon95@gmail.com 
-description: A blog about intelligence, me, and other stuff
+description: Intelligence, math, zen, and practical fatalism
 baseurl: "" # the subpath of your site
 url: "http://mitchgordon.me" # the base hostname & protocol for your site
 github_username: mitchellgordon95 
