--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Mitchell Gordon
+title: Mitchell A. Gordon
 email: mitchell.gordon95@gmail.com 
 description: Intelligence, math, zen, and practical fatalism
 baseurl: "" # the subpath of your site
