Adding a link to the blog in the nav

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,13 @@ show_excerpts: false
 plugins:
   - jekyll-feed
 
+# Minima stuff
+header_pages:
+  - about.md
+  - index.md
+  - books.md
+  - songs.md
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
