--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: Intelligence, math, zen, and practical fatalism
 baseurl: "" # the subpath of your site
 url: "http://mitchgordon.me" # the base hostname & protocol for your site
 github_username: mitchellgordon95 
-disqus:
-  shortname: mitchells-blog 
+# disqus:
+#   shortname: mitchells-blog 
 google_analytics: UA-66541822-1
 
 # Build settings
